salesforce_sfdx/main/default/objects/OSMX_TC_Futuro__c/OSMX_TC_Futuro__c.object-meta.xml
<CustomObject>
    <label>OSMX_TC_Futuro</label>
    <nameField>
        <label>OSMX_TC_Futuro Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSMX_TC_Futuro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>