salesforce_sfdx/main/default/objects/OSMX_TC_Futuro__c/fields/Tipo_Periodo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Periodo__c</fullName>
    <label>Tipo_Periodo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>