salesforce_sfdx/main/default/objects/OSMX_TC_Futuro__c/fields/TS_fechaFinPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TS_fechaFinPeriodo__c</fullName>
    <label>TS_fechaFinPeriodo</label>
    <type>Date</type>
</CustomField>