salesforce_sfdx/main/default/objects/OSMX_TC_Futuro__c/fields/TS_fechaInicioPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TS_fechaInicioPeriodo__c</fullName>
    <label>TS_fechaInicioPeriodo</label>
    <type>Date</type>
</CustomField>