salesforce_sfdx/main/default/objects/OSMX_TC_Futuro__c/fields/TS_Max__c.field-meta.xml
<CustomField>
    <fullName>TS_Max__c</fullName>
    <label>TS_Max</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>