salesforce_sfdx/main/default/objects/OSMX_TC_Futuro__c/fields/TS_NumQ_A_o__c.field-meta.xml
<CustomField>
    <fullName>TS_NumQ_A_o__c</fullName>
    <label>TS_NumQ_Año</label>
    <length>10</length>
    <type>Text</type>
</CustomField>