salesforce_sfdx/main/default/objects/OSMX_TC_Futuro__c/fields/TS_Promedio__c.field-meta.xml
<CustomField>
    <fullName>TS_Promedio__c</fullName>
    <label>TS_Promedio</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>